tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts
// @target: es2015
class C2 extends { foo: string; } { } // error

class C6 extends []{ } // error